Big mentor revue checkstyle fix.